# 2025-P4-Slothlesss

./: Dockerfile  README.md  docker-compose.yml  main.tf  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
